@@ -34,7 +34,8 @@ binomCI(x = 12, n = 50, method = "clopper-pearson")
 binom.test(x = 12, n = 50)$conf.int
 ```
 
-For all intervals implemented see the help page of function binomCI.
+For all intervals implemented see the help page of function binomCI. One can
+also compute bootstrap intervals.
 
 
 ### Difference of Two Binomial Proportions
@@ -48,7 +49,8 @@ binomDiffCI(a = 5, b = 0, c = 51, d = 29)
 binomDiffCI(a = 212, b = 144, c = 256, d = 707, paired = TRUE)
 ```
 
-For all intervals implemented see the help page of function binomDiffCI.
+For all intervals implemented see the help page of function binomDiffCI. One
+can also compute boostrap intervals.
 
 
 ### Mean and SD
@@ -57,11 +59,15 @@ We can compute confidence intervals for mean and SD of a normal distribution.
 x <- rnorm(50, mean = 2, sd = 3)
 ## mean and SD unknown
 normCI(x)
+meanCI(x)
+sdCI(x)
 ## SD known
 normCI(x, sd = 3)
 ## mean known
 normCI(x, mean = 2)
 ```
+
+One can also compute bootstrap intervals.
 
 
 ### Difference in Means
